add a dropdown menu, display completed projects only, show only visible projects in the dropdown menu

--- a/Umbraco_WebSite/Umbraco_WebSite.vbproj
+++ b/Umbraco_WebSite/Umbraco_WebSite.vbproj
@@ -2652,6 +2652,7 @@
     <Content Include="Views\Partials\_mainMenu.cshtml" />
     <Content Include="Views\Partials\_siteMap.cshtml" />
     <Content Include="Views\Partials\MacroPartials\listNewestProjects.cshtml" />
+    <Content Include="Views\AboutUs.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
